Fixed footer alignment on projects page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,6 +178,9 @@ button {
     max-height: 100%;
     max-width:100%;
 }
+.pageWrapperBlog >.footer{
+    position: relative;
+}
 /* Blog Full Page Ends */
 
 /* Contact Me Begins*/
